@@ -1,5 +1,7 @@
 Changelog for Miosix np embedded OS
 
+- Fixed MPU size calculation, added _elf_pool_start and _elf_pool_end symbols
+  that a linker script supporting processes must provide.
 - Thread creation no longer calls errorHandler(OUT_OF_MEMORY) if there
   is no memory to create a thread. This has been done to prevent system
   reboots when the (kernel) heap is full, especially if a process creates
